added custom command to auto-generated fungen files; removed auto_* files from repo

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -11,15 +11,30 @@ project(engine C)
 # compiler flags passed as arguments 
 add_definitions(-Wall -std=c99)
 
-# Set output directories for libraries and executables
-SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_SOURCE_DIR}/bin)				 
+# set output directories for libraries and executables
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)				 
+
+# add a custom command to prepare auto-generated sources
+add_custom_command (
+  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/auto_assign.h
+         ${CMAKE_CURRENT_BINARY_DIR}/auto_assign.c
+         ${CMAKE_CURRENT_BINARY_DIR}/auto_comps.h
+         ${CMAKE_CURRENT_BINARY_DIR}/auto_comps.c
+  COMMAND python ${CMAKE_SOURCE_DIR}/scripts/fun_gen.py
+  COMMENT "Generating: auto_comps{h,c} and auto_assign.{h,c}"
+)
 
 # specify the header files location
-include_directories(${CMAKE_SOURCE_DIR}/include)
+include_directories(${CMAKE_SOURCE_DIR}/include
+                    ${CMAKE_CURRENT_BINARY_DIR}
+)
 
 # specify the TARGET executable
 file(GLOB engine_SOURCES ${CMAKE_SOURCE_DIR}/src/*.c)
-add_executable(engine ${engine_SOURCES})
+add_executable(engine ${CMAKE_CURRENT_BINARY_DIR}/auto_assign.c
+                      ${CMAKE_CURRENT_BINARY_DIR}/auto_comps.c
+                      ${engine_SOURCES}
+)
 
 # find linked libraries
 find_package(Threads)
