switched from -std=c99 to -std=gnu99 to allow _BSD_SOURCE and c99 mode to work together

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -9,7 +9,7 @@ cmake_minimum_required(VERSION 2.6)
 project(engine C)
 
 # compiler flags passed as arguments 
-add_definitions(-Wall -std=c99)
+add_definitions(-Wall -std=gnu99)
 
 # set output directories for libraries and executables
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)				 
