* using CMAKE_PREFIX_PATH to specify arbitrary location of flow-tools * make can now take CMAKE_PREFIX_PATH argument for cmake

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -2,12 +2,6 @@
 # ------------------------------- CMake -------------------------------------#
 # ---------------------------------------------------------------------------#
 
-# extend cmake include and library paths
-set(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH}
-                       "/usr/local/flow-tools/include")
-set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH}
-                       "/usr/local/flow-tools/lib")
-
 # minimum supported cmake version
 cmake_minimum_required(VERSION 2.6)
 
@@ -31,7 +25,7 @@ add_custom_command (
 )
 
 # specify the header files location
-include_directories(${CMAKE_INCLUDE_PATH}
+include_directories(${CMAKE_PREFIX_PATH}/include
                     ${CMAKE_SOURCE_DIR}/include
                     ${CMAKE_CURRENT_BINARY_DIR}
 )
