prefering static linking of flow-tools; somehow ftlib.dyld is not working

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -41,7 +41,7 @@ add_executable(engine ${CMAKE_CURRENT_BINARY_DIR}/auto-assign.c
 find_package(Threads)
 find_library(MLIB m)
 find_library(ZLIB z)
-find_library(FTLIB ft)
+find_library(FTLIB libft.a ft)
 find_library(JSONLIB json)
 
 # specify linked libraries
