--- a/src/engine/Makefile
+++ b/src/engine/Makefile
@@ -19,7 +19,8 @@ doc: Doxyfile
 	doxygen Doxyfile
 
 clean:
-	rm -f  -r html 
-	rm -f  -r latex
-	rm -f  -r .build
-	rm -f  -r bin
+	rm -f -r html
+	rm -f -r latex
+	rm -f -r .build
+	rm -f -r bin
+	rm -f -r examples/*.json
