inhibiting preference on static linking, essentially undoing 478fceb, was a local Mac OS X issue

--- a/src/engine/CMakeLists.txt
+++ b/src/engine/CMakeLists.txt
@@ -60,7 +60,7 @@ add_dependencies(engine examples)
 find_package(Threads)
 find_library(MLIB m)
 find_library(ZLIB z)
-find_library(FTLIB libft.a ft)
+find_library(FTLIB ft)
 find_library(JSONLIB json)
 
 # specify linked libraries
