--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : The Geek Debauchery
+title : NFQL: Development Blog
 tagline: Site Tagline
 author :
   name : Vaibhav Bajpai
@@ -27,7 +27,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://vbajpai.github.com/blog.vaibhavbajpai.com
+production_url : http://vbajpai.github.com/nfql/blog
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -56,7 +56,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://vbajpai.github.com/blog.vaibhavbajpai.com
+  BASE_PATH : http://vbajpai.github.com/nfql/blog
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
