--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -9,14 +9,13 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : NFQL: Development Blog
+title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : Vaibhav Bajpai
-  email : contact@vaibhavbajpai.com
-  github : vbajpai
-  twitter : bajpaivaibhav
-  facebook : vaibhavbajpai
+  name : Name Lastname
+  email : blah@email.test
+  github : username
+  twitter : username
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -27,7 +26,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://vbajpai.github.com/nfql/blog
+production_url : http://username.github.com
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -56,7 +55,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://vbajpai.github.com/nfql/blog
+  BASE_PATH : false
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -80,7 +79,7 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : false
+    provider : disqus
     disqus :
       short_name : jekyllbootstrap
     livefyre :
