--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+# generated files
 bin
 .build
-*.swp
-*.pyc
-tags
 engine/examples/query-*.json
+*.pyc
+
+# vim temporary files
+*.swp
+*.swo
+
+# ctags
+tags
